--- a/style.css
+++ b/style.css
@@ -21,14 +21,13 @@
     background-color: rgb(253, 255, 151);
 }
 
-/* Grid layout */
+/* Header layout */
 
 .header { 
     grid-area: header; 
     text-align: center;
     position: sticky; 
     top: 0;
-    line-height: 30px;
 }
 
 .header-separator { 
@@ -36,9 +35,11 @@
     position: sticky;
     top: 0;
 }
+
+/* Nav-menu atributes */
+
 .nav-menu { 
-    grid-area: nav-menu; 
-    line-height: 30px;
+    grid-area: nav-menu;
     position: sticky;
     top: 0;
     padding: 0px;
@@ -47,7 +48,7 @@
 }
 
 .nav-menu a {
-    font-size: 10px;
+    /* font-size: 10px; */
     width: 25%;
     padding: 0px;
     margin: 0px;
@@ -66,8 +67,7 @@
     background-color: red;
     text-decoration: none;
     transition-timing-function: easeInOutExpo;
-    transform: translateY(.25em);
-    transition: background-color 0.2s, transform 0.2s;
+    transition: background-color 0.4s;
 }
 
 .nav-menu a:active {
@@ -77,11 +77,8 @@
     transition: transform 0.1s;
 }
 
-.separator1 { 
-    grid-area: separator1; 
-    position: sticky;
-    top: 40px;
-}
+/* Article atributes */
+
 .left-column { 
     grid-area: left-column; 
     padding: 20px 20px;
@@ -89,30 +86,49 @@
 .article { 
     grid-area: article; 
 }
+
+.article img {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+}
+
+/* Separator atributes */
+
+.separator1 { 
+    grid-area: separator1; 
+    position: sticky;
+}
+
 .separator2 { 
     grid-area: separator2; 
-    position: sticky; 
-    bottom: 40px;
+    position: sticky;
 }
+
+/* Footer atributes */
+
 .footer-address { 
     grid-area: footer-address; 
     text-align: center;
-    line-height: 40px;
     position:sticky; 
     bottom:0;
 }
+
 .footer-separator { 
     grid-area: footer-separator; 
     position:sticky; 
     bottom:0;
 }
+
 .footer-contacts { 
     grid-area: footer-contacts; 
     text-align: center;
-    line-height: 40px;
     position:sticky; 
     bottom:0;
 }
+
+/* Grid layout */
 
 .grid-container {
     display: grid;
@@ -123,8 +139,23 @@
     'separator2 separator2 separator2'
     'footer-address footer-separator footer-contacts';
     gap: 0px;
-    grid-template-rows: 30px 30px auto 40px 40px;
-    grid-template-columns: 200px auto 300px; 
+    grid-template-rows: 40px 40px auto 40px 40px;
+    grid-template-columns: 260px auto 340px; 
+}
+
+.footer-contacts,
+.footer-address,
+.nav-menu,
+.header {
+    line-height: 40px;
+}
+
+.separator1 {
+    top: 40px;
+}
+
+.separator2 {
+    bottom: 40px;
 }
 
 /* Body atributes */
@@ -143,6 +174,12 @@ body {
 html {
     color: black;
     height: 100%;
-    font-size: 10px; /* px means "pixels": the base font size is now 10 pixels high  */
     font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google fonts */
+}
+
+/* Font */
+
+.nav-menu a,
+html  {
+    font-size: 12px;
 }
